# python-app-base-layout

./: .env.example  .gitignore  Makefile  README.md  config.py  docker-compose.src.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  client.py  handler.py  logger.py  models.py  parser.py  service.py  settings.py  storage.py
app/service/: app_data.py  service.py
app/storage/: database.py  models.py  storage.py
src/: __init__.py  db.py  logger.py
src/config/: __init__.py  db.py  logger.py
